<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f7fb"
    android:orientation="vertical"
    tools:context=".CreateStudyModuleActivity" >

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_create_class"
        android:textColor="#282e3e"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/checkOk"
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_check_24" />

    <EditText
        android:id="@+id/edtClassName"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_button_white"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:hint="@string/name_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/edtClassDescribe"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button_white"
        android:ems="10"
        android:hint="@string/describe_class"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtClassName" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/allow_member_class"
        android:textColor="#282e3e"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edtClassDescribe"
        app:layout_constraintTop_toBottomOf="@+id/edtClassDescribe"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/checkAllowed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/edtClassDescribe"
        app:layout_constraintTop_toBottomOf="@+id/edtClassDescribe" />

</androidx.constraintlayout.widget.ConstraintLayout>